--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,25 @@
 <h1 class="container-header">
-  {{ tittle }}
+  <span>{{ title }}</span>
 </h1>
 
-<div class="container-header-button">
-  <button (click)="refreshPage()">Refresh Page</button>
+<div class="container-header-date">
+  <h1>{{ dateToday | date }}</h1>
 </div>
 
 <p *ngIf="toDos.length == 0">
   You don't have any chores <i>yet</i>
 </p>
 
-<form [formGroup]="form">
+<form class="container-header-form" [formGroup]="form">
   <fieldset>
     <label for="">Chore: </label>
-    <input type="text" placeholder="Type your chore" maxlength="100" formControlName="chore" name="" id="">
+    <input
+    type="text"
+    placeholder="Type your chore"
+    maxlength="100"
+    formControlName="chore"
+    name=""
+    id="">
     <small *ngIf="form.controls.chore.invalid && !form.controls.chore.pristine">
       This chore should have more than 5 characteres
     </small>
@@ -23,16 +29,18 @@
 
 <ul class="container-chore-list">
   <li *ngFor="let toDoItems of toDos">
-    {{ toDoItems.id }}. {{ toDoItems.chore }}
+    <span>{{ toDoItems.id }}. {{ toDoItems.chore }}</span>
 
-    <button (click)="removeListItem(toDoItems)">Delete</button>
+    <span class="buttons">
+      <button class="delete" (click)="removeListItem(toDoItems)">Delete</button>
 
-    <button *ngIf="!toDoItems.isDone" (click)="closeListItem(toDoItems)">Done</button>
-    <button *ngIf="toDoItems.isDone" (click)="openListItem(toDoItems)">Undone</button>
+      <button class="isUndone" *ngIf="!toDoItems.isDone" (click)="closeListItem(toDoItems)">Undone</button>
+      <button class="isDone" *ngIf="toDoItems.isDone" (click)="openListItem(toDoItems)">Done</button>
+    </span>
   </li>
 </ul>
 
-<form *ngIf="toDos.length >= 10" [formGroup]="form">
+<form class="container-header-form" *ngIf="toDos.length >= 6" [formGroup]="form">
   <fieldset>
     <label for="">Chore: </label>
     <input type="text" placeholder="Type your chore" maxlength="100" formControlName="chore" name="" id="">
@@ -43,6 +51,6 @@
   </fieldset>
 </form>
 
-<div class="container-footer-button">
+<div class="container-footer-button" *ngIf="toDos.length !== 0">
   <button (click)="deleteAllListItems()">Delete All Chores</button>
 </div>
