--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,25 +2,164 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    span {
+        border: 5px solid black;
+        border-radius: 2rem;
+        box-shadow: 1px 1px 10px rgb(175, 175, 175);
+
+        padding: 1rem;
+
+        text-shadow: 2px 2px 15px rgb(98, 0, 255);
+        font-size: 3em;
+        color: white;
+        background: rgba(175, 175, 175, 0.25);
+    }
 }
 
-.container-header-button {
+.container-header-date {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
 
-    button {
-        margin: 1rem;
+p {
+    text-align: center;
+    font-weight: 600;
+    font-size: 2em;
+
+    i {
+        color: white;
+    }
+}
+
+.container-header-form {
+    fieldset {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        border: 0px solid black;
+
+        label {
+            margin: 0 1rem 0 1rem;
+            font-weight: 600;
+            font-size: 1.5em;
+
+            color: white;
+        }
+
+        input {
+            padding: 0 1rem 0 1rem;
+            font-size: 1.5em;
+
+            border: 1px solid;
+            border-radius: 0.5rem;
+        }
+
+        small {
+            margin: 0 1rem 0 1rem;
+        }
+
+        button:disabled {
+            margin-left: 1.5rem;
+            padding: 0.5rem;
+
+            border: 1px solid;
+            border-radius: 0.5rem;
+
+            color: white;
+            font-weight: 600;
+            background: rgba(120, 120, 120, 0.75);
+        }
+        button:hover:disabled {
+            background: rgba(120, 120, 120, 0.75);
+        }
+        button {
+            margin-left: 1.5rem;
+            padding: 0.5rem;
+
+            border: 1px solid;
+            border-radius: 0.5rem;
+
+            box-shadow: 0px 0px 5px rgb(175, 175, 175);
+            text-shadow: 2px 2px 15px rgb(98, 0, 255);
+
+            color: white;
+            font-weight: 600;
+            background: rgba(79, 24, 131, 0.342);
+        }
+        button:hover {
+            background: rgba(175, 175, 175, 0.25);
+        }
     }
 }
 
 .container-chore-list {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    justify-content: space-evenly;
 
-    button {
+    list-style: none;
+
+    color: white;
+
+    margin: 0;
+    padding: 0;
+
+    li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        border: 2.5px solid black;
+        border-radius: 2rem;
+
+        background: rgba(79, 24, 131, 0.342);
+
+        padding: 1rem 0rem 1rem 2.5rem;
+        margin: 0.5rem 5rem 0.5rem 5rem;
+
+        font-size: 1.4em;
+        font-weight: 600;
+    }
+    li:hover {
+        box-shadow: 0px 0px 25px rgba(175, 175, 175, 0.5);
+    }
+
+    .buttons {
         margin: 0.5rem;
+
+        .delete {
+            background: rgb(255, 50, 50);
+            border: 0px solid black;
+            border-radius: 0.5rem;
+
+            font-weight: 600;
+
+            margin: 0.5rem;
+        }
+
+        .isDone {
+            background: rgb(0, 150, 0);
+            border: 0px solid black;
+            border-radius: 0.5rem;
+
+            font-weight: 600;
+
+            margin: 0.5rem;
+        }
+
+        .isUndone {
+            background: rgb(255, 255, 100);
+            border: 0px solid black;
+            border-radius: 0.5rem;
+
+            font-weight: 600;
+
+            margin: 0.5rem;
+        }
     }
 }
 
@@ -30,6 +169,21 @@
     justify-content: center;
 
     button {
-        margin: 1rem;
+        margin-top: 1rem;
+        padding: 0.5rem;
+
+        border: 1px solid;
+        border-radius: 0.5rem;
+
+        box-shadow: 0px 0px 5px rgb(175, 175, 175);
+        text-shadow: 2px 2px 15px rgb(98, 0, 255);
+
+        color: white;
+        font-size: 1.5rem;
+        font-weight: 600;
+        background: rgba(79, 24, 131, 0.342);
+    }
+    button:hover {
+        background: rgba(175, 175, 175, 0.25);
     }
 }
