--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@ div {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin-top: 2.5rem;
     span {
       border: 0.25rem solid black;
       border-radius: 2rem;
@@ -197,9 +197,17 @@ div {
       background: rgba(79, 24, 131, 0.342);
 
       padding: 1rem 0rem 1rem 1rem;
+      margin: 0.5rem 0 0.5rem 0;
 
-      font-size: 1.4em;
       font-weight: 600;
+
+      @media only screen and (max-width: 280px) {
+        font-size: 1.5em;
+        padding: 0.25rem 0rem 0.25rem 1rem;
+      }
+      @media only screen and (min-width: 590px) {
+        font-size: 1.5em;
+      }
     }
     li:hover {
       box-shadow: 0px 0px 25px rgba(175, 175, 175, 0.5);
