--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -231,7 +231,7 @@ div {
         mat-icon {
           padding: 0;
           margin: 0;
-          color: rgb(221, 38, 38);
+          color: #ff6d6d;
           font-size: 1.5rem;
 
           display: flex;
